tests/good/basic_arithmetics_int.xprshn
// int =, +, -, *, /
int a!
int b!

a = 10!
b = 2!

a = a + b!
print a!

a = a - b!
print a!

a = a * b!
print a!

a = a / b!
print a!

