tests/compile_error/undeclared_var.xprshn
// Compile error: use of undeclared variable
int a!
a = 5!
print b! // 'b' is undeclared 